siistin vähän lähteitä

--- a/tex/ilmari_references.bib
+++ b/tex/ilmari_references.bib
@@ -1,283 +1,243 @@
-@online{kummu,
-author = "Kummu, Jussi",
-title={Lämpöpumput},
-date={2019-10-02},
-url={https://moodle.tuni.fi/pluginfile.php/308799/mod_resource/content/1/Heat Pumps Tampere University 2019 10 02.pdf},
-urldate={2020-01-09},
-note={Esitelmä lämpöpumpuista}
-}
-
-@misc{rautiainen,
-author = "Rautiainen, Samu",
-copyright = "All rights reserved",
-keywords = "verkkovaikutus",
-organization = "Tampereen ammattikorkeakoulu",
-publisher = "Tampereen ammattikorkeakoulu",
-title = "Lämpöpumppujen verkkovaikutukset",
-year = "2018",
-note = "Huono lähde, etsi parempi"
-}
-
-@article{ModelBasedFlexibilityAssessment,
-abstract = "<p>This paper presents and demonstrates a methodology to explore the flexibility of a heat pump pool. Three points are in the focus of this work: First the procedure to model a pool of residential heat pump systems. Second the study of the response of a large number of heat pumps when the Smart-Grid-Ready interface is used for direct load control. Third a general assessment of flexibility of a pool of heat pump systems.</p> <p>The presented pool model accounts for the diversity in space heating and domestic hot water demands, the types of heat source and heat distribution systems used and system sizing procedures. The model is validated using field test data. Flexibility is identified by sending trigger signals to a pool of 284 SG-Ready heat pumps and evaluating the response. Flexibility is characterized by maximum power, shiftable energy and regeneration time. Results show that flexibility is highly dependent on the ambient temperature and the use of an electric back-up...",
-author = "Fischer, David and Wolf, Tobias and Wapler, Jeannette and Hollinger, Raphael and Madani, Hatef",
-issn = "0360-5442",
-journal = "Energy",
-keywords = "Flexibility ; Heat Pumps ; Thermal Storage ; Pooling ; Demand Side Management ; Smart Grid ; Environmental Sciences ; Economics",
-language = "eng",
-pages = "853,864",
-publisher = "Elsevier Ltd",
-title = "Model-based flexibility assessment of a residential heat pump pool",
-volume = "118",
-year = "2017-01-01",
-}
-
 @article{ShenJiangLi,
-author = "Shen, Js and Jiang, CW and Li, BS",
-journal = "Energies",
-language = "English",
-number = "10",
-pages = "11187,11202",
-publisher = "MDPI",
-title = "Controllable Load Management Approaches in Smart Grids",
-volume = "8",
-date = "2015-10",
+author    = {Shen, Js and Jiang, CW and Li, BS},
+journal   = {Energies},
+language  = {English},
+number    = {10},
+pages     = {11187,11202},
+publisher = {MDPI},
+title     = {Controllable Load Management Approaches in Smart Grids},
+volume    = {8},
+date      = {2015-10},
 }
 
 @INPROCEEDINGS{fischerTriebelSelinger,
-author={D. {Fischer} and M. {Triebel} and O. {Selinger-Lutz}},
-booktitle={2018 IEEE PES Innovative Smart Grid Technologies Conference Europe (ISGT-Europe)},
-title={A Concept for Controlling Heat Pump Pools Using the Smart Grid Ready Interface},
-year={2018},
-volume={},
-number={},
-pages={1-6},
-abstract={This paper introduces a control concept for aggregators to directly control a pool of residential heat pumps using market available technology. Smart meters are used for measuring the electric demand and the heat pumps' SG-Ready interfaces are used to trigger four different load-shifting strategies in the heat pump. The main idea of this paper is to use optimal control to calculate the setpoints for the pool and to track them using classic PID controls. The optimal control model as well as the implemented PID controller are both tailored to represent the available load shifting strategies. The characteristic response of the heat pump pool to a direct control signal is considered in the formulation of the optimal control problem. The control concept is tested with a pool of 284 heat pumps located in different buildings. The concept is demonstrated to realise an optimised operation of the pool respecting the variability of the prices on the day-ahead market for electricity. Tracking of a set-value for power consumption of the pool is presented. It showed that sending the signal to randomly selected heat pumps in the pool is similarly efficient as selecting from a priority list when not affecting the comfort of the occupants. Results indicate that control parameters should be continuously adjusted using an online estimation procedure to avoid oscillation.},
-keywords={heat pumps;optimal control;power markets;smart meters;smart power grids;heat pump pool;smart grid ready interface;residential heat pumps;optimal control model;direct control signal;control parameters;PID controller;load-shifting strategies;day-ahead market;power consumption;Load modeling;Heat pumps;Optimal control;Resistance heating;Switches;Smart meters;Buildings;Heat pumps;Thermal storage;Pooling;Aggregator;Direct controls;Optimal control;SG- Ready},
-doi={10.1109/ISGTEurope.2018.8571870},
-ISSN={null},
-month={10},}
+author    = {D. {Fischer} and M. {Triebel} and O. {Selinger-Lutz}},
+booktitle = {2018 IEEE PES Innovative Smart Grid Technologies Conference Europe (ISGT-Europe)},
+title     = {A Concept for Controlling Heat Pump Pools Using the Smart Grid Ready Interface},
+year      = {2018},
+pages     = {1-6},
+doi       = {10.1109/ISGTEurope.2018.8571870},
+month     = {10}
+}
 
 @incollection{sousaPortugal,
-author = "de Sousa, M. and Portugal, P.",
-booktitle = "Industrial Communication Systems",
-copyright = "Copyright 2019 Elsevier B.V., All rights reserved.",
-isbn = "9781439802823",
-pages = "36",
-publisher = "CRC Press",
-title = "Modbus",
-date = "2016-04-19",
+author    = {de Sousa, M. and Portugal, P.},
+booktitle = {Industrial Communication Systems},
+copyright = {Copyright 2019 Elsevier B.V., All rights reserved.},
+isbn      = {9781439802823},
+pages     = {36},
+publisher = {CRC Press},
+title     = {Modbus},
+date      = {2016-04-19}
 }
 
 @article{Setala,
-author={Niina Setälä},
-title={Tarjolla uusia mahdollisuuksia teollisuuden hukkalämmön hyödyntämiseen: korkealämpöpumput tuottavat jo 100 celsiusastetta},
-urldate={2020-03-24},
-date={2020-03-07},
-url={https://www-tekniikkatalous-fi.libproxy.tuni.fi/uutiset/tarjolla-uusia-mahdollisuuksia-teollisuuden-hukkalammon-hyodyntamiseen-korkealampopumput-tuottavat-jo-100-celsiusastetta/cecda00f-3b2c-493b-a325-b22a41daec5a},
-publisher={Tekniikka & Talous}
+author    = {Niina Setälä},
+title     = {Tarjolla uusia mahdollisuuksia teollisuuden hukkalämmön hyödyntämiseen: korkealämpöpumput tuottavat jo 100 celsiusastetta},
+url       = {https://www-tekniikkatalous-fi.libproxy.tuni.fi/uutiset/tarjolla-uusia-mahdollisuuksia-teollisuuden-hukkalammon-hyodyntamiseen-korkealampopumput-tuottavat-jo-100-celsiusastetta/cecda00f-3b2c-493b-a325-b22a41daec5a},
+urldate   = {2020-03-24},
+date      = {2020-03-07},
+publisher = {Tekniikka & Talous}
 }
 
 @incollection{DincerRosen,
-title = "Chapter 7 - Exergy Analysis of Heat Pump Systems",
-editor = "Ibrahim Dincer and Marc A. Rosen",
-booktitle = "Exergy (Second Edition)",
-publisher = "Elsevier",
-edition = "Second Edition",
-pages = "101 - 113",
-year = "2013",
-isbn = "978-0-08-097089-9",
-doi = "https://doi.org/10.1016/B978-0-08-097089-9.00007-3",
-url = "http://www.sciencedirect.com/science/article/pii/B9780080970899000073",
-author = "Ibrahim Dincer and Marc A. Rosen"
+title     = {Chapter 7 - Exergy Analysis of Heat Pump Systems},
+author    = {Ibrahim Dincer and Marc A. Rosen},
+booktitle = {Exergy (Second Edition)},
+publisher = {Elsevier},
+edition   = {Second Edition},
+pages     = {101 - 113},
+year      = {2013},
+isbn      = {978-0-08-097089-9},
+doi       = {https://doi.org/10.1016/B978-0-08-097089-9.00007-3},
+url       = {http://www.sciencedirect.com/science/article/pii/B9780080970899000073}
 }
 
 @techreport{SFSEN50160,
-type = {Standardi},
-title={Yleisestä Jakeluverkosta Syötetyn Sähkön Jänniteominaisuudet},
-publisher={Suomen Standardoimidiitto SFS},
-number = {SFS-EN 50160:2010},
-institution = {Suomen Standardoimidiitto SFS}
+title       = {Yleisestä Jakeluverkosta Syötetyn Sähkön Jänniteominaisuudet},
+publisher   = {Suomen Standardoimidiitto SFS},
+number      = {SFS-EN 50160:2010},
+institution = {Suomen Standardoimidiitto SFS},
+type        = {standardi}
 }
 
 @manual{pehmokaynnistinopas,
-title={Pehmokäynnistinopas},
-author={ABB},
-url={https://library.e.abb.com/public/d11f99611045fef8c125796e00473a8a/OPAS Pehmokaynnistys 1FI12_01.pdf}
+title   = {Pehmokäynnistinopas},
+author  = {ABB},
+url     = {https://library.e.abb.com/public/d11f99611045fef8c125796e00473a8a/OPAS Pehmokaynnistys 1FI12_01.pdf},
+urldate = {2020-09-13}
 }
 
 @misc{Latomaki,
-  author = "Latomäki, Janne",
-  organization = "Jyväskylän ammattikorkeakoulu",
-  title = "Maalämpöpumpun monitorointi ja etäohjaus",
-  year = "2019",
+author       = {Latomäki, Janne},
+organization = {Jyväskylän ammattikorkeakoulu},
+title        = {Maalämpöpumpun monitorointi ja etäohjaus},
+year         = {2019}
 }
 
 @misc{Harsia,
-author = {Harsia, Pirkko and Honkapuro, Samuli},
-keywords = {sähköjärjestelmät},
-language = {fin},
+author       = {Harsia, Pirkko and Honkapuro, Samuli},
+keywords     = {sähköjärjestelmät},
 organization = {Tampereen ammattikorkeakoulu},
-publisher = {Sähköinfo Oy},
-title = {Kysyntäjousto edistää uusiutuvaa sähköntuotantoa},
+publisher    = {Sähköinfo Oy},
+title        = {Kysyntäjousto edistää uusiutuvaa sähköntuotantoa}
 }
 
 @online{modbusOrg,
 organization = {Modbus Organization},
-title={Modbus Website and FAQ},
-url={https://modbus.org},
-urldate={2020-08-06}
+title        = {Modbus Website and FAQ},
+url          = {https://modbus.org},
+urldate      = {2020-08-06}
 }
 
 @techreport{modbusAppSpec,
 institution = {Modbus Organization},
-title={MODBUS Application Protocol Specification V1.1b3},
-type = {Standard}
+title       = {MODBUS Application Protocol Specification V1.1b3},
+type        = {standardi}
 }
 
 @techreport{modbusSerialSpec,
 institution = {Modbus Organization},
-title={MODBUS over Serial Line Specification and Implementation Guide V1.02},
-url={https://modbus.org/specs.php},
-type = {Standard}
+title       = {MODBUS over Serial Line Specification and Implementation Guide V1.02},
+url         = {https://modbus.org/specs.php},
+type        = {standardi}
 }
 
 @techreport{modbusTCPIPSpec,
 institution = {Modbus Organization},
-title={MODBUS MESSAGING ON TCP/IP IMPLEMENTATION GUIDE V1.0b},
-url={https://modbus.org/specs.php},
-type = {Standard}
+title       = {MODBUS MESSAGING ON TCP/IP IMPLEMENTATION GUIDE V1.0b},
+url         = {https://modbus.org/specs.php},
+type        = {standardi}
 }
 
 @techreport{osi,
 institution = {International Telecommunication Union},
-title={INFORMATION TECHNOLOGY – OPEN SYSTEMS INTERCONNECTION -- BASIC REFERENCE MODEL: THE BASIC MODEL},
-url={https://www.itu.int/rec/T-REC-X.200},
-type = {Standard}
+title       = {INFORMATION TECHNOLOGY – OPEN SYSTEMS INTERCONNECTION -- BASIC REFERENCE MODEL: THE BASIC MODEL},
+url         = {https://www.itu.int/rec/T-REC-X.200},
+type        = {standardi}
 }
 
 @online{seCom,
 organization = {Schneider Electric},
-title={Schneider Electric website},
-url={https://www.se.com},
-urldate={2020-08-06},
-note={\href{https://www.se.com/us/en/product-range-presentation/576-modbus-plus}{\underline{Modbus Plus}},
-      \href{https://www.se.com/ca/en/faqs/FA198221/}{\underline{differenses to Modbus}}}
+title        = {Schneider Electric website},
+url          = {https://www.se.com},
+urldate      = {2020-08-06},
+note         = {\href{https://www.se.com/us/en/product-range-presentation/576-modbus-plus}{\underline{Modbus Plus}},
+                \href{https://www.se.com/ca/en/faqs/FA198221/}{\underline{differenses to Modbus}}}
 }
 
 @techreport{modbusTCPIPTLSSpec,
 institution = {Modbus Organization},
-title={MODBUS/TCP Security-v21 2018-07-24},
-url={https://modbus.org/specs.php},
-type = {Standard}
+title       = {MODBUS/TCP Security-v21 2018-07-24},
+url         = {https://modbus.org/specs.php},
+type        = {standardi}
 }
 
 @techreport{SGReadyReg,
 institution = {Bundesverband Wärmepumpe e.V.},
-title={Regularien Vergabe SG-Ready V 2.0},
-url={https://www.waermepumpe.de/sg-ready/},
-type = {Standard}
+title       = {Regularien Vergabe SG-Ready V 2.0},
+url         = {https://www.waermepumpe.de/fileadmin/user_upload/bwp_service/Guetesiegel/2020_SG-ready_Regularien_2.0_final.pdf},
+urldate     = {2020-09-13},
+type        = {standardi}
 }
 
 @misc{pakonen,
-author = {Mäkinen, Antti and Pakonen, Pertti},
+author       = {Mäkinen, Antti and Pakonen, Pertti},
 organization = {TTY},
-title = {Sähköverkon häiriöt ja sähkön laatu -- opintomoniste},
+title        = {Sähköverkon häiriöt ja sähkön laatu -- opintomoniste}
 }
 
 @misc{SVTSaLaTuo,
 organization = {Tilastokeskus},
-title = {Suomen virallinen tilasto (SVT): Sähkön ja lämmön tuotanto},
-issn = {1798-5072},
-year = {2018},
-url = {http://www.stat.fi/til/salatuo/2018/salatuo_2018_2019-11-01_tie_001_fi.html},
-urldate = {2020-08-19}
+title        = {Suomen virallinen tilasto (SVT): Sähkön ja lämmön tuotanto},
+issn         = {1798-5072},
+year         = {2018},
+url          = {http://www.stat.fi/til/salatuo/2018/salatuo_2018_2019-11-01_tie_001_fi.html},
+urldate      = {2020-08-19}
 }
 
 @misc{SVTehk,
 organization = {Tilastokeskus},
-title = {Suomen virallinen tilasto (SVT): Energian hankinta ja kulutus, Liitekuvio 22. Sähkön kulutus sektoreittain 2018},
-issn = {1799-795X},
-year = {2018},
-url = {http://www.stat.fi/til/ehk/2018/04/ehk_2018_04_2019-03-28_kuv_022_fi.html},
-urldate = {2020-08-19}
+title        = {Suomen virallinen tilasto (SVT): Energian hankinta ja kulutus, Liitekuvio 22. Sähkön kulutus sektoreittain 2018},
+issn         = {1799-795X},
+year         = {2018},
+url          = {http://www.stat.fi/til/ehk/2018/04/ehk_2018_04_2019-03-28_kuv_022_fi.html},
+urldate      = {2020-08-19}
 }
 
 @misc{energiateollisuus,
 organization = {Energiateollisuus ry},
-title = {Sähköntuotanto},
-url = {https://energia.fi/energiasta/energiantuotanto/sahkontuotanto},
-urldate = {2020-08-19}
+title        = {Sähköntuotanto},
+url          = {https://energia.fi/energiasta/energiantuotanto/sahkontuotanto},
+urldate      = {2020-08-19}
 }
 
 @misc{fingrid,
 organization = {Fingrid},
-title = {Kantaverkkoyhtiö Fingridin verkkosivut},
-url = {https://www.fingrid.fi/}
+title        = {Kantaverkkoyhtiö Fingridin verkkosivut},
+url          = {https://www.fingrid.fi/},
+urldate      = {2020-09-13}
 }
 
 @misc{sulpu,
 organization = {Suomen lämpöpumppuyhdistys},
-title = {Suomen lämpöpumpputilastot},
-url = {https://www.sulpu.fi/tilastot},
-urldate = {2020-08-19}
+title        = {Suomen lämpöpumpputilastot},
+url          = {https://www.sulpu.fi/tilastot},
+urldate      = {2020-08-19}
 }-
 
 @article{sello,
-  title    = {Kauppakeskus Sello tähtää reservimarkkinoille},
-  journal  = {Fingrid Oyj:n lehti},
-  year     = {2018},
-  number   = {2},
-  issn     = {1455-7517},
+title    = {Kauppakeskus Sello tähtää reservimarkkinoille},
+journal  = {Fingrid Oyj:n lehti},
+year     = {2018},
+number   = {2},
+issn     = {1455-7517}
 }
 
 @book{dictOfEnergy,
-title = {Dictionary of energy},
-abstract = {An essential reference companion for anyone with an interest in energy, including scientists, consultants, journalists, economists, educators, students and policy-makers.},
-address = {Oxford, United Kingdom},
+title     = {Dictionary of energy},
+address   = {Oxford, United Kingdom},
 booktitle = {Dictionary of energy},
-edition = {Second edition.},
-isbn = {1-78539-112-7},
-keywords = {Power resources},
-language = {eng},
+edition   = {Second edition.},
+isbn      = {1-78539-112-7},
 publisher = {Elsevier Science \& Technology},
 }
 
 @misc{mittariAsetus,
-title = {Valtioneuvoston asetus sähköntoimitusten selvityksestä ja mittauksesta},
+title  = {Valtioneuvoston asetus sähköntoimitusten selvityksestä ja mittauksesta},
 number = {5.2.2009/66}
 }
 
 @misc{reserviLaki,
-title = {Laki sähköntuotannon ja -kulutuksen välistä tasapainoa varmistavasta tehoreservistä},
+title  = {Laki sähköntuotannon ja -kulutuksen välistä tasapainoa varmistavasta tehoreservistä},
 number = {11.2.2011/117}
 }
 
 @misc{enwg,
-title = { EnWG §14a Steuerbare Verbrauchseinrichtungen in Niederspannung; Verordnungsermächtigung},
-url = {https://www.gesetze-im-internet.de/enwg_2005/__14a.html},
+title   = { EnWG §14a Steuerbare Verbrauchseinrichtungen in Niederspannung; Verordnungsermächtigung},
+url     = {https://www.gesetze-im-internet.de/enwg_2005/__14a.html},
 urldate = {2020-08-20}
 }
 
 @techreport{VDEARN4100,
 institution = {Forum Netztechnik/Netzbetrieb im VDE},
-title={VDE-AR-N 4100 Anwendungsregel:2019-04},
-url={https://www.vde.com/en/fnn/topics/technical-connection-rules/technical-connection-rules-for-low-voltage},
-type = {Standard}
+title       = {VDE-AR-N 4100 Anwendungsregel:2019-04},
+url         = {https://www.vde.com/en/fnn/topics/technical-connection-rules/technical-connection-rules-for-low-voltage},
+type        = {standardi}
 }
 
 @online {katriVala,
-title = {Katri Valan lämpöpumppulaitos},
+title        = {Katri Valan lämpöpumppulaitos},
 organization = {Helen Oy},
-url = {https://www.helen.fi/helen-oy/energia/energiantuotanto/voimalaitokset/katri-vala},
-urldate = {2020-08-29}
+url          = {https://www.helen.fi/helen-oy/energia/energiantuotanto/voimalaitokset/katri-vala},
+urldate      = {2020-08-29}
 }
 
 @mastersthesis{koskenjoki,
-  author  = {Kari Koskenjoki},
-  title   = {Verkkovaihtosuuntaajan Suuntaajasillan Optimointi},
-  school  = {Tampereen Teknillinen Yliopisto},
-  year    = {2012}
+author  = {Kari Koskenjoki},
+title   = {Verkkovaihtosuuntaajan Suuntaajasillan Optimointi},
+school  = {Tampereen Teknillinen Yliopisto},
+year    = {2012}
 }
 
 @techreport{NVEHAN,
